Add calculator buttons

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="display"><p>2</p></div>
+        
+        <div class="btns">
+            <div class="btn">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>0</button>
+                <button>.</button>
+                <button>=</button>
+            </div>
+            <div class="operator">
+                <button>C</button>
+                <button>+</button>
+                <button>-</button>
+                <button>:</button>
+                <button>x</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
