--- a/index.html
+++ b/index.html
@@ -9,29 +9,37 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display"><p>2</p></div>
+        <div class="display">
+            <div class="current-display"></div>
+            <div class="last-display"></div>
+        </div>
         
         <div class="btns">
-            <div class="btn">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>0</button>
-                <button>.</button>
-                <button>=</button>
+            <div class="remove">
+                <button id="delete-btn">C</button>
+                <button id="clear-btn">CE</button>
             </div>
+
+            <div class="btn">
+                <button class="number-btn">1</button>
+                <button class="number-btn">2</button>
+                <button class="number-btn">3</button>
+                <button class="number-btn">4</button>
+                <button class="number-btn">5</button>
+                <button class="number-btn">6</button>
+                <button class="number-btn">7</button>
+                <button class="number-btn">8</button>
+                <button class="number-btn">9</button>
+                <button class="number-btn">0</button>
+                <button class="number-btn">.</button>
+                <button id="equals-btn">=</button>
+            </div>
+
             <div class="operator">
-                <button>C</button>
-                <button>+</button>
-                <button>-</button>
-                <button>:</button>
-                <button>x</button>
+                <button class="operator-btn">+</button>
+                <button class="operator-btn">-</button>
+                <button class="operator-btn">:</button>
+                <button class="operator-btn">x</button>
             </div>
         </div>
     </div>
